# slmc_final

./: CMakeLists.txt  dataload.h  main.cpp  neuralnetwork.h  slmc.h
